--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -2,10 +2,8 @@ name: Docker image
 
 on:
   push:
-    branches: [ 'main' ]
-  workflow_dispatch:
-  release:
-    types: [ published ]
+    tags:
+      - "*"
 
 env:
   REGISTRY: ghcr.io
@@ -41,6 +39,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
