--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to DockerHub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -45,10 +51,17 @@ jobs:
             type=raw,value=latest
             type=ref,event=tag
 
-      - name: Build and push Docker image
+      - name: Build and push multi-arch Docker images
         uses: docker/build-push-action@v6
         with:
           context: .
+          platforms: |
+            linux/amd64,
+            linux/arm64,
+            linux/arm/v7,
+            linux/ppc64le,
+            linux/s390x
           push: ${{ github.event_name != 'pull_request' }}
+          pull: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
