--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -57,10 +57,7 @@ jobs:
           context: .
           platforms: |
             linux/amd64,
-            linux/arm64,
-            linux/arm/v7,
-            linux/ppc64le,
-            linux/s390x
+            linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           pull: true
           tags: ${{ steps.meta.outputs.tags }}
